# retail-visitor-analytics

./: .gitignore  CHOICES.md  DESIGN.md  README.md  ana.ipynb  pyproject.local.toml  pyproject.toml
dashboard/: app.py
outputs/: brand_summary.json  category_summary.json  combined_summary.json  events.jsonl  person_ranking_cam1.json  person_ranking_cam2.json  persons_cam1.json  persons_cam2.json  sales_summary.json  salesperson_summary.json  summary_cam1.json  summary_cam2.json  summary_filtered_cam1.json  summary_filtered_cam2.json  summary_raw_cam1.json  summary_raw_cam2.json  summary_strict_cam1.json  summary_strict_cam2.json  top_zones_cam1.json  top_zones_cam2.json  zone_analytics_cam1.json  zone_analytics_cam2.json  zone_summary_cam1.json  zone_summary_cam2.json
src/cctv_tracker/: __init__.py  cli.py  generate_events.py  sales_analytics.ipynb  sales_analytics.py
